@@ -3,17 +3,13 @@ Hash: SHA256
 
 DIST defluff-0.3.2-linux-i686.zip 14258 SHA256 582bade12c2462d6f9370b5cc4139619ca9f0ff7451d298353d406e805db0256 SHA512 8befa4c0f4daefd1adbafeddcec65bb808859df6df9c8d43d6a0aaa797a395e3c18b682b955d7e0271dab84da0ce8323d8dc7d17efa2978db7b94e1467fca3f9 WHIRLPOOL 8b57c07f99abdc9a7b4a9e318710c64478ed76f1e28e0cb4d8218cb30d1797f161e19f8b6b83217305676ed18154079fc2333eaf5a7174a40b136195c1a3f9d7
 DIST defluff-0.3.2-linux-x86_64.zip 15601 SHA256 a9c6cbc2c0df8401e6bd694d635a5dae9cea07458239a0da814d35c8b90388f6 SHA512 15c0355eb926541a7b9f55880c9e7196fdab1da7117d3dc8fb392c413a09938e759ec95b1759ef870cd4b6c005f110245045a1786e5a4accfa5be83342485f67 WHIRLPOOL c861f3848bfa15fa6f839e5d1ddd2c67c7e74a1502cf5deb8319043b7e2a9120676e47e85531394584110741a224c83c86e988183e41a32fef345484f1ff393a
-EBUILD defluff-0.3.2.ebuild 757 SHA256 3b618c2d2297de2280b6b3d6e1c57171671b089ee3a8ba3affae98eec20ec6ec SHA512 51a1c21ff04800bbfd2ed030e1a7f5421d34f9c00db75d663f31394aa99ec30b1be2644115be041a4081cf020ac4a1ff1f5663bfb3216ac0e96d08ee6bd09229 WHIRLPOOL 38ef6055aecd917e3740a610a28dfd850241cb1bfc98311ab4fbec8a87ec569dc1143f0a6f7aa4ba113e1e6ca3bab321522a36d6379045cbe3bb75f4c6294746
-MISC ChangeLog 462 SHA256 ac6cc01408a70e215b36071f313f0835ef5987ef8004ae853e34f8b1e3f8554a SHA512 c17e2eeb16ea6b5ca42dbb0dd76b60d64c6c3d549b98526432b2853793741cd91f7e68d50fe12d36e100300d826124de24936367432cfcee83eee7f51557d4dd WHIRLPOOL e9fe11b40111a7ac183a631d538b890fd4f6f81ba3a09201f8698bf06e78da679fa83cd3e5e7ee01b2031289902935fbd41cd9ae5a8e6fd7c8e9cbcfdf5641a9
+EBUILD defluff-0.3.2.ebuild 784 SHA256 0d4744d6449a5f6c79d5544ce291f13caf3be53129f1cd1371920c23ca5e355c SHA512 8d3546262f6dbcd3c26c2abf33bc7ef19ff6e1395995568b6d5a146ea0997cdba1e50e9023d964fbfc0ff96bd54291f495edd079b2de5189ec71d76efab45912 WHIRLPOOL 19af70c5d38b7b5024ad2ad308928d804a2e3a8884489fd8a3f8853e34411638c1acdafd41efb94c37e76d4aec9ea8ba2b48786dddc3ae263ce3984d2b146356
+MISC ChangeLog 576 SHA256 dd6f7c639c64c11efbe449cbf3b0f5194187add1a4653c354ed59e04e49f15f9 SHA512 ab30c97c8e0b2d04a40b127149c3afae39cbe67e1c77fa617ededa44ab78e384093dc1e3afabed4a9759d2848f885d8f38f42e88d4dfc4d12f4e8e29f9e27588 WHIRLPOOL dae91320521dee399cf4aafa6fc2476b06f084973edbe935e665aa99c19bc23bb2e2a7eb7b42b44dc48a3f4f11ffe3783935f33bb8fdf25b51a70b222a2f4b01
 MISC metadata.xml 259 SHA256 767118f2e46c7b6a557d187184d734ed5287cf59e280ad2de93fb0c8eb250f04 SHA512 276fea52a18c914e226ba75baeb5de5bf9ac508e064fa26f149359fdceba92454b90713c0a34ffa65b5cb6779c0f7f1de5f65bd7e2c2cebbb57f3c5d1849430e WHIRLPOOL ec1a74972b59032abe845bc688a9d56260ca222c4569e8936442e32a918ed12f86e1095e5336a246288ed30e64486aaa3f5743dc6b1376ea009686c58a47372a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTcyXdAAoJEJWyH81tNOV9vRgIALcdsMSEtnJdUBzhS7+LnBT3
-xLMprVrBE4K0NawRlRyfdI+83YPLeJoejxJ7XjMnf0z36bP/wQPnEoUn+5xFIArG
-f/A0nSvjYNN9a3PR6V8EWIfnnSAKAzBJkFzg32/2FOve8JIhCijAxLBRTXo3cJmY
-ryilsOq8h1FAxPDNKAA/KfiheUOAcWHflvDdtMw1jenkXbXP5l1uWQzPxzfdIIaI
-5WiH57CzFBS3BgNjnpJVAlyWbeFABogQLwcBAWHAuBMGnN5vpzpfIEyvjPYe7yxO
-cQQklwYkM71aljEZkDmd0VrTk0MtHRjgDCIaFkF6OoGZa6RCIi0MZYFWvu/Q1YM=
-=Zhbg
+iEYEAREIAAYFAlUiCcAACgkQso7CE7gHKw0RJwCcDbCgRNT7uQowqZKgyWWJAs4x
+ueMAoJdJRcnn5QKYDFyyoQj4lKJZ5tTp
+=/crQ
 -----END PGP SIGNATURE-----
