@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/defluff/defluff-0.3.2.ebuild,v 1.1 2014/05/14 08:14:30 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/defluff/defluff-0.3.2.ebuild,v 1.2 2015/04/06 04:21:07 idella4 Exp $
 
 EAPI=5
 
@@ -20,6 +20,7 @@ RDEPEND=""
 S="${WORKDIR}"
 
 QA_PREBUILT="/opt/bin/${PN}"
+RESTRICT="bindist mirror"
 
 src_install() {
 	into /opt
