@@ -5,6 +5,7 @@ EAPI=5
 HOMEPAGE=http://j-o.users.sourceforge.net/ http://encode.ru/threads/1214-defluff-a-deflate-huffman-optimizer
 KEYWORDS=~amd64 ~x86 -*
 LICENSE=all-rights-reserved
+RESTRICT=bindist mirror
 SLOT=0
 SRC_URI=amd64? ( http://encode.ru/attachment.php?attachmentid=1523 -> defluff-0.3.2-linux-x86_64.zip ) x86? ( http://encode.ru/attachment.php?attachmentid=1522 -> defluff-0.3.2-linux-i686.zip )
-_md5_=fe2789cd19c5bc0130be2fd13ae367a5
+_md5_=1617dce5ee0b74fca5df60b3d60e01a2
