@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/defluff
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/defluff/ChangeLog,v 1.1 2014/05/14 08:14:30 tomwij Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/defluff/ChangeLog,v 1.2 2015/04/06 04:21:07 idella4 Exp $
+
+  06 Apr 2015; Ian Delaney <idella4@gentoo.org> defluff-0.3.2.ebuild:
+  add RESTRICT conditions wrt Bug #539774
 
 *defluff-0.3.2 (14 May 2014)
 
